@@ -20,6 +20,7 @@ require 'openssl/bn'
 require 'openssl/cipher'
 require 'openssl/config'
 require 'openssl/digest'
+require 'openssl/x509'
 require 'openssl/ssl-internal'
 require 'openssl/x509-internal'
 
